--- a/css/style.css
+++ b/css/style.css
@@ -41,13 +41,87 @@ img {
   width: 100%;
 }
 
+header {
+  background-color: #ffffff;
+  text-align: center;
+  padding: 10px 0;
+  margin: 0px;
+  width: 100%;
+  position: fixed;
+  border-bottom: 3px solid #FF88DB;
+}
+
+nav {
+  width: 100%;
+}
+
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+nav > ul > li {
+  display: inline-block;
+}
+
+nav > ul > li > a {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4B4B4B;
+}
+
+nav>ul>li>a:visited {
+  display: inline-block;
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4B4B4B;
+  text-decoration: none;
+}
+
+nav>ul>li>a:hover {
+  display: inline-block;
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #FF88DB;
+  text-decoration: none;
+}
+
+nav>ul>li>a:focus {
+  display: inline-block;
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+nav>ul>li>a:active {
+  display: inline-block;
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+main {
+  padding-top: 255px;
+}
+
 footer {
   background-color: #F0F0F0;
+  text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 16px; /* Sets the font size to 16px */
   font-weight: 300; /* Sets the font weight to 300 */
   line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
   color: #4B4B4B;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  bottom: 0;
+  display: inline-block;
+  width: 100%;
 }
 
 a {
@@ -55,18 +129,18 @@ a {
   text-decoration: none; /* No underlining */
 }
 a:visited { /* visited link */
-  color: #FF88DB;
+  color: #4B4B4B;
 }
 a:hover {
-  color: #88BEFF;
+  color: #FF88DB;
   text-decoration: none; /* Underlining when hovering over a link */
 }
 a:active { /* selected link */
   color: #FF88DB;
 }
-a:hover,
+
 a:focus {
-  color: #88BEFF;
+  color: #FF88DB;
   text-decoration: none;
 }
 
@@ -107,10 +181,37 @@ a:focus {
   transition: 0.2s opacity;
 }
 
-#colorstrip {
-border: 0;
-top: 0;
-height: 15px;
-margin-bottom: 10px;
-background: #FF88DB;
+/* Layout styling */
+.container {
+  padding: 0 10px;
+}
+
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
+
+#work .row {
+  padding-bottom: 25px; border-bottom: 1px solid #F0F0F0;
+}
+
+#hero {
+  text-align: center;
+  background-color: #ffffff;
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+.center {
+  text-align: center;
+}
+
+.logo {
+  max-width: 250px;
+}
+
+.social-links {
+  display: inline-block;
+  max-width: 44px;
+  padding: 0px 20;
 }
