--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,10 @@ img {
   width: 100%;
 }
 
+.gifSmallView {
+  width: 30%;
+}
+
 header {
   background-color: #ffffff;
   text-align: center;
@@ -52,20 +56,24 @@ header {
   margin: 0px;
   width: 100%;
   position: fixed;
+  z-index: 9999;
   border-bottom: 3px solid #FF88DB;
 }
 
 nav {
   width: 100%;
+  color: #4B4B4B;
 }
 
 nav > ul {
   list-style-type: none;
   padding: 0;
+  color: #4B4B4B;
 }
 
 nav > ul > li {
   display: inline-block;
+  color: #4B4B4B;
 }
 
 nav > ul > li > a {
@@ -98,6 +106,7 @@ nav>ul>li>a:focus {
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 700;
+  color: #4B4B4B;
   text-decoration: none;
 }
 
@@ -130,21 +139,85 @@ footer {
 
 a {
   color: #FF88DB;
-  text-decoration: none; /* No underlining */
+  text-decoration: none;
+  transition: 0.2s opacity;
 }
-a:visited { /* visited link */
+a:visited {
   color: #4B4B4B;
+  text-decoration: none;
 }
 a:hover {
   color: #FF88DB;
-  text-decoration: none; /* Underlining when hovering over a link */
+  text-decoration: none;
+  opacity: 0.8;
 }
-a:active { /* selected link */
+a:active {
   color: #FF88DB;
+  text-decoration: none;
 }
 
 a:focus {
   color: #FF88DB;
+  text-decoration: none;
+}
+
+a:before {
+  content: "";
+  position: absolute;
+  text-decoration: none;
+  color: #4B4B4B;
+  width: 100%;
+  height: 0px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+a:hover:before {
+  visibility: visible;
+  text-decoration: none;
+  color: #4B4B4B;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.noHover:hover::before {
+  background: none;
+  visibility: hidden;
+  text-decoration: none;
+}
+
+a:after {
+  content: "";
+  position: absolute;
+  text-decoration: none;
+  width: 100%;
+  height: 0px;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(255, 255, 255);
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+a:hover:after {
+  visibility: visible;
+  text-decoration: none;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.noHover:hover::after {
+  background: none;
+  visibility: hidden;
   text-decoration: none;
 }
 
@@ -153,6 +226,8 @@ a:focus {
   background-color: #FF88DB;
   color: #ffffff;
   font-weight: 400;
+  text-decoration: none;
+  z-index: 0;
   padding:8px 28px;
   border-radius: 25px;
   transition: 0.2s opacity;
@@ -164,7 +239,6 @@ a:focus {
   font-weight: 400;
   padding:8px 28px;
   border-radius: 25px;
-  transition: 0.2s opacity;
 }
 .button:visited {
   display: inline-block;
@@ -173,16 +247,10 @@ a:focus {
   font-weight: 400;
   padding:8px 28px;
   border-radius: 25px;
-  transition: 0.2s opacity;
 }
 .button:hover {
-  display: inline-block;
-  background-color: #FFB5E9;
   color: #ffffff;
-  font-weight: 400;
-  padding:8px 28px;
-  border-radius: 25px;
-  transition: 0.2s opacity;
+  opacity: 0.8;
 }
 
 /* Layout styling */
@@ -194,16 +262,79 @@ a:focus {
   margin: 25px 0; /* 25px top and bottom, 0 left and right */
 }
 
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 #work .row {
   padding-bottom: 25px; border-bottom: 1px solid #F0F0F0;
+}
+
+#about {
+  padding: 10px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+#about img {
+  padding: 10px 0;
+  display: block;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#about h2 {
+  text-align: center;
 }
 
 #hero {
   text-align: center;
   background-color: #ffffff;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 20px 0;
+  display: block;
+  width: 100%;
+}
+
+[class*='col-'] {
+  padding: 10px;
+}
+
+.col-sm-12 {
+  width: 100%;
+}
+
+#skills {
+  margin: 0 auto;
+  padding: 5px 0;
   display: inline-block;
   width: 100%;
+}
+
+#skills .container div {
+  text-align: left;
+}
+
+#mystory h4 {
+  text-align: left;
+  margin: 0 auto;
+}
+
+#mystory .container div ul {
+  text-align: left;
+  list-style: none;
+  padding-left: 0
+}
+
+#skills h4 {
+  text-align: left;
+  margin: 0 auto;
 }
 
 .center {
@@ -215,7 +346,223 @@ a:focus {
 }
 
 .social-links {
+  position: relative;
+}
+
+.social-links ul {
+  padding: 0;
+}
+
+.social-links li {
+  list-style: none;
   display: inline-block;
-  max-width: 44px;
-  padding: 0px 20;
+  position: relative;
+  font-size: 40px;
+  color: #FF88DB;
+  margin: 5px;
+}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation-duration: 30s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
+
+/* Top and Bottom borders go out */
+
+div.container a
+{
+    color: #FFF;
+    text-decoration: none;
+    position: relative;
+    cursor: pointer;
+}
+
+div.topBotomBordersOut a:before, div.topBotomBordersOut a:after
+{
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background: #FF88DB;
+    content: "";
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+div.topBotomBordersOut a:before
+{
+    top: 0px;
+    transform: translateY(10px);
+}
+
+div.topBotomBordersOut a:after
+{
+    bottom: 0px;
+    transform: translateY(-10px);
+}
+
+div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
+{
+    opacity: 1;
+    transform: translateY(0px);
+}
+
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 64px;
+  }
+
+  main {
+    padding-top: 200px;
+  }
+
+  .col-md-6 {
+  width: 50%;
+  }
+
+  .col-md-4 {
+  width: 33%;
+  }
+
+  .col-md-5 {
+  width: 30%;
+  }
+
+  .col-md-7 {
+  width: 65%;
+  }
+
+  [class*="col-"] {
+  float: left;
+  }
+
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 64px;
+  }
+
+  body {
+    font-size: 20px;
+  }
+
+  main {
+    padding-top: 200px;
+  }
+
+  .col-lg-5 {
+  width: 28%;
+  }
+
+  .col-lg-7 {
+  width: 70%;
+  }
+
+  .col-lg-6 {
+  width: 60%;
+  }
+
+  [class*="col-"] {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  }
+
+  .container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 64px;
+  }
+
+  main {
+    padding-top: 200px;
+  }
+
+  .col-lg-5 {
+  width: 28%;
+  }
+
+  .col-lg-7 {
+  width: 70%;
+  }
+
+  [class*="col-"] {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  }
+
+  .container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
