--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ img {
 header {
   background-color: #ffffff;
   text-align: center;
-  padding: 10px 0;
+  padding: 5px 0;
   margin: 0px;
   width: 100%;
   position: fixed;
@@ -68,6 +68,7 @@ nav {
 nav > ul {
   list-style-type: none;
   padding: 0;
+  margin-top: 35px;
   color: #4B4B4B;
 }
 
@@ -79,7 +80,7 @@ nav > ul > li {
 nav > ul > li > a {
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   color: #4B4B4B;
 }
 
@@ -87,7 +88,7 @@ nav>ul>li>a:visited {
   display: inline-block;
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   color: #4B4B4B;
   text-decoration: none;
 }
@@ -96,7 +97,7 @@ nav>ul>li>a:hover {
   display: inline-block;
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   color: #FF88DB;
   text-decoration: none;
 }
@@ -105,7 +106,7 @@ nav>ul>li>a:focus {
   display: inline-block;
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   color: #4B4B4B;
   text-decoration: none;
 }
@@ -114,7 +115,7 @@ nav>ul>li>a:active {
   display: inline-block;
   padding: 0 15px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: none;
 }
 
@@ -342,7 +343,7 @@ a:hover:after {
 }
 
 .logo {
-  max-width: 250px;
+  max-width: 200px;
 }
 
 .social-links {
@@ -402,7 +403,6 @@ a:hover:after {
 
 div.container a
 {
-    color: #FFF;
     text-decoration: none;
     position: relative;
     cursor: pointer;
